docs/spec/03-grammar.ebnf
(* ============================================================
   Ori Language — Formal Grammar (Surface S3)
   Chapter 03 of the Ori Language Specification

   Surface cutover: 0.3.0 (Auk9-inspired S3)
   Product decisions: docs/archive/legacy/ori-surface-s3-auk9.md

   Notation: Extended Backus-Naur Form (EBNF)
     A = B C        -- A is B followed by C
     A = B | C      -- A is B or C
     A = [ B ]      -- B is optional
     A = { B }      -- B zero or more times
     A = ( B )      -- grouping
     "x"            -- terminal: literal token x
     UPPER          -- terminal defined in Chapter 02 (lexer token)
     lower          -- non-terminal defined in this grammar

   Whitespace and comments between tokens are always ignored.
   ============================================================ *)


(* ============================================================
   SOURCE FILE
   ============================================================ *)

source_file
    = module_decl
      { import_decl | imports_block }
      { top_level_decl }
    ;

module_decl
    = "module" qualified_name
    ;

(* Three import forms (S3). No `as` / `only`. Multi-comma only in imports_block. *)
import_decl
    = [ "public" ] "import" import_form
    ;

import_form
    = qualified_name "(" import_item { "," import_item } [ "," ] ")"   (* selective *)
    | qualified_name "=" IDENT                                         (* path = alias *)
    | qualified_name                                                   (* bare path, no implicit alias *)
    ;

import_item
    = IDENT [ "=" IDENT ]    (* member rename inside selective list only *)
    ;

imports_block
    = "imports"
      { import_line }
      "end"
    ;

import_line
    = import_form { "," import_form }
    ;

qualified_name
    = IDENT { "." IDENT }
    ;


(* ============================================================
   TOP-LEVEL DECLARATIONS
   ============================================================ *)

top_level_decl
    = [ attr_list ] func_decl
    | [ attr_list ] struct_decl
    | [ attr_list ] enum_decl
    | [ attr_list ] trait_decl
    | [ attr_list ] apply_decl
    | [ attr_list ] alias_decl
    | [ attr_list ] const_decl
    | [ attr_list ] var_decl
    | extern_block
    ;

attr_list
    = attr { attr }
    ;

attr
    = "@" IDENT [ "(" attr_arg_list ")" ]
    ;

attr_arg_list
    = attr_arg { "," attr_arg }
    ;

attr_arg
    = STRING
    | IDENT ":" STRING
    | IDENT ":" IDENT
    ;

visibility
    = "public"
    | (* empty — private by default *)
    ;


(* ============================================================
   FUNCTIONS (no declaration keyword `func`)
   ============================================================ *)

func_decl
    = visibility [ "async" | "iter" ] [ "mut" ] IDENT
      (* `iter` declares a generator: the return type is the element type and
         the body yields with `suspend` (chapter 06). `async iter` is rejected. *)
      [ type_params ]
      [ bound_clause ]                 (* for T: Trait after name / params region *)
      "(" [ param_list ] ")"
      [ "->" type ]
      func_body
    ;

(* Bounds Auk9-style: `max for T: Comparable (a: T, b: T) -> T` *)
bound_clause
    = "for" bound_item { "," bound_item }
    ;

bound_item
    = IDENT ":" type_ref
    | IDENT ":" "not" type_ref
    ;

func_body
    = "=>" expression                  (* single-expression body (S3) *)
    | block                            (* multi-statement, ends with end [label] *)
    ;

param_list
    = param { "," param } [ "," ]
    ;

param
    = IDENT ":" type [ "..." ]           (* variadic: last param only *)
    | IDENT ":" type "=" expression      (* default value *)
    | IDENT ":" type "if" value_contract (* value contract: checked at call time *)
    | IDENT ":" type "=" expression "if" value_contract
    ;

value_contract
    = expression                          (* uses contextual "it" for the checked value *)
    ;

type_params
    = "[" type_param { "," type_param } "]"
    ;

type_param
    = IDENT
    ;


(* ============================================================
   CLOSURES (S3: no `do` / `fn` / `given`)
   ============================================================ *)

closure_expr
    = "(" [ closure_param_list ] ")" [ "->" type ] closure_body
    ;

closure_param_list
    = closure_param { "," closure_param }
    ;

closure_param
    = IDENT [ ":" type ]
    ;

closure_body
    = "=>" expression
    | block
    ;


(* ============================================================
   TYPES (brackets only; no angle generics; no `of` forms)
   ============================================================ *)

type
    = primitive_type
    | named_type
    | generic_type
    | func_type
    | tuple_type
    ;

primitive_type
    = "bool"
    | "int" | "int8" | "int16" | "int32" | "int64"
    | "u8"  | "u16"  | "u32"  | "u64"
    | "float" | "float32" | "float64"
    | "string"
    | "bytes"
    | "void"
    ;

named_type
    = qualified_name
    ;

generic_type
    = "optional" "[" type "]"
    | "result"   "[" type "," type "]"
    | "list"     "[" type "]"
    | "map"      "[" type "," type "]"
    | "set"      "[" type "]"
    | "range"    "[" type "]"
    | "lazy"     "[" type "]"
    | "any"      "[" type_ref "]"
    | "future"   "[" type "]"
    | qualified_name "[" type { "," type } "]"
    ;

(* Callable type still uses the word `func` (type constructor, not a declaration). *)
func_type
    = "func" "(" [ type { "," type } ] ")" "->" type
    | "func" "(" [ type { "," type } ] ")"
    ;

tuple_type
    = "tuple" "[" type "," type { "," type } "]"
    ;

type_ref
    = qualified_name
    ;


(* ============================================================
   STRUCTS / ENUMS
   ============================================================ *)

struct_decl
    = visibility "struct" IDENT
      [ type_params ]
      { struct_field }
      { struct_method }
      "end"
    ;

struct_field
    = IDENT ":" type [ "if" value_contract ]
    ;

struct_method
    = func_decl
    ;

enum_decl
    = visibility "enum" IDENT
      [ type_params ]
      { enum_variant }
      "end"
    ;

enum_variant
    = IDENT
    | IDENT "(" named_field { "," named_field } ")"
    ;

named_field
    = IDENT ":" type
    ;


(* ============================================================
   TRAITS
   ============================================================ *)

trait_decl
    = visibility "trait" IDENT
      [ type_params ]
      { trait_member }
      "end"
    ;

trait_member
    = func_signature          (* required: no body *)
    | func_decl               (* default: has body; no `default` keyword *)
    ;

func_signature
    = visibility [ "mut" ] IDENT
      [ type_params ]
      [ bound_clause ]
      "(" [ param_list ] ")"
      [ "->" type ]
    ;


(* ============================================================
   APPLY (S3: apply Type + use Trait + bind)
   ============================================================ *)

apply_decl
    = "apply" type_ref
      { apply_free_member }
      { apply_use_section }
      "end"
    ;

apply_free_member
    = func_decl
    | IDENT "=" IDENT   (* slot = freeFunction bind *)
    ;

apply_use_section
    = "use" type_ref
      { apply_use_member }
      "end"
    ;

apply_use_member
    = func_decl
    | IDENT "=" IDENT
    | "type" IDENT "=" type
    ;


(* ============================================================
   ALIAS / CONST / VAR
   ============================================================ *)

alias_decl
    = visibility "alias" IDENT [ type_params ] "=" type
    ;

(* Locals (0.3.1 + option B): ":" type optional when RHS is locally inferable
   (literal, field, index, call, pipe). Top-level / pub still require types. *)
const_decl
    = visibility "const" IDENT [ ":" type ] "=" expression
    ;

var_decl
    = visibility "var" IDENT [ ":" type ] "=" expression
    ;


(* ============================================================
   EXTERN BLOCKS
   ============================================================ *)

extern_block
    = "extern" abi_label
      { extern_member }
      "end"
    ;

abi_label
    = "c"
    | "host"
    ;

extern_member
    = visibility IDENT "(" [ param_list ] ")" [ "->" type ]
    | visibility "var" IDENT ":" type
    ;


(* ============================================================
   BLOCKS AND STATEMENTS
   ============================================================ *)

block
    = { statement }
      end_token
    ;

(* Optional labeled end: end if / end match / end for / … *)
end_token
    = "end" [ IDENT ]
    ;

statement
    = const_decl
    | var_decl
    | assignment_stmt
    | compound_assign_stmt
    | return_stmt
    | suspend_stmt
    | break_stmt
    | continue_stmt
    | if_stmt
    | if_some_stmt
    | while_stmt
    | while_some_stmt
    | for_stmt
    | repeat_stmt
    | loop_stmt
    | match_stmt
    | using_stmt
    | check_stmt
    | expression_stmt
    ;

assignment_stmt
    = lvalue "=" expression
    ;

compound_assign_stmt
    = lvalue "+=" expression
    | lvalue "-=" expression
    | lvalue "*=" expression
    | lvalue "/=" expression
    ;

lvalue
    = IDENT
    | lvalue "." IDENT
    | lvalue "[" expression "]"
    ;

return_stmt
    = "return" [ expression ]
    ;

(* Contextual: only at statement start inside an `iter` function body. *)
suspend_stmt
    = "suspend" expression
    ;

break_stmt
    = "break"
    ;

continue_stmt
    = "continue"
    ;

expression_stmt
    = expression
    ;


(* ============================================================
   CONTROL FLOW
   ============================================================ *)

if_stmt
    = "if" expression
      { statement }
      { "elif" expression { statement } }
      [ "else" { statement } ]
      end_token
    ;

if_some_stmt
    = "if" "some" "(" IDENT ")" "=" expression
      { statement }
      [ "else" { statement } ]
      end_token
    ;

while_stmt
    = "while" expression block
    ;

while_some_stmt
    = "while" "some" "(" IDENT ")" "=" expression block
    ;

for_stmt
    = "for" IDENT [ "," IDENT ] "in" expression block
    ;

repeat_stmt
    = "repeat" expression [ "times" ] block
    ;

loop_stmt
    = "loop" block
    ;

match_stmt
    = "match" expression
      { match_case }
      end_token
    ;

match_case
    = "case" pattern [ "if" expression ] ":"
      { statement }
    | "case" "else" ":"
      { statement }
    ;

(* Match enum variants: no leading dot on the case name (S3). *)
pattern
    = "_"
    | literal
    | IDENT
    | IDENT "(" [ named_pattern { "," named_pattern } ] ")"
    | "some" "(" pattern ")"
    | "none"
    | "ok" "(" pattern ")"
    | "err" "(" pattern ")"
    | "tuple" "(" pattern { "," pattern } ")"
    ;

named_pattern
    = IDENT ":" pattern
    | IDENT
    ;


(* ============================================================
   USING / CHECK
   ============================================================ *)

using_stmt
    = "using" IDENT ":" type "=" expression
    ;

check_stmt
    = "check" expression [ "," STRING ]
    ;


(* ============================================================
   EXPRESSIONS
   ============================================================ *)

expression
    = pipe_expr
    | closure_expr
    | if_expr
    | struct_update_expr
    ;

(* Pipe is a product feature (kept through S3). `a |> f` ≡ `f(a)`.
   Local inference option B may omit types when the call return is concrete. *)
pipe_expr
    = or_expr { "|>" or_expr }
    ;

or_expr
    = and_expr { "or" and_expr }
    ;

and_expr
    = compare_expr { "and" compare_expr }
    ;

compare_expr
    = add_expr [ compare_op add_expr ]
    ;

compare_op
    = "==" | "!=" | "<" | "<=" | ">" | ">="
    ;

add_expr
    = mul_expr { add_op mul_expr }
    ;

add_op
    = "+" | "-"
    ;

mul_expr
    = unary_expr { mul_op unary_expr }
    ;

mul_op
    = "*" | "/" | "%"
    ;

unary_expr
    = "-" unary_expr
    | "not" unary_expr
    | "try" unary_expr                       (* only propagation form; no postfix ? *)
    | postfix_expr
    ;

postfix_expr
    = primary_expr { postfix_op }
    ;

(* Poetic call: callee IDENT expression — at most one juxtaposition per expr.
   Nested poetic call is a hard error (parse.poetic_call_nested). *)
postfix_op
    = "." IDENT
    | "." INTEGER
    | "(" [ arg_list ] ")"
    | "[" index_expr "]"
    | IDENT                                  (* poetic single-arg call *)
    ;

index_expr
    = expression
    | expression ".." expression
    | expression ".."
    | ".." expression
    | ".."
    ;

arg_list
    = arg { "," arg } [ "," ]
    ;

arg
    = [ IDENT ":" ] expression
    | ".." expression
    ;

primary_expr
    = literal
    | IDENT
    | qualified_name
    | "self"
    | "(" expression ")"
    | tuple_expr
    | list_expr
    | map_or_struct_literal
    | enum_variant_expr
    ;


(* ============================================================
   IF EXPRESSION (Ori form retained)
   ============================================================ *)

if_expr
    = "if" expression "then" expression "else" expression
    ;


(* ============================================================
   STRUCT UPDATE
   ============================================================ *)

struct_update_expr
    = expression "with"
      "{" [ field_init { "," field_init } [ "," ] ] "}"
      "end"
    ;


(* ============================================================
   COLLECTION / STRUCT LITERALS (S3)
   ============================================================ *)

tuple_expr
    = "tuple" "(" expression "," expression { "," expression } ")"
    ;

list_expr
    = "[" [ expression { "," expression } [ "," ] ] "]"
    ;

(* Disambiguation: identifier before `:` → struct field; literal before `:` → map key. *)
map_or_struct_literal
    = [ type_ref ] "{" [ field_or_map_entry { "," field_or_map_entry } [ "," ] ] "}"
    ;

field_or_map_entry
    = IDENT ":" expression                 (* struct field *)
    | literal ":" expression               (* map entry *)
    ;

field_init
    = IDENT ":" expression
    ;

enum_variant_expr
    = type_ref "." IDENT [ "(" [ field_init { "," field_init } [ "," ] ] ")" ]
    | "." IDENT [ "(" [ field_init { "," field_init } [ "," ] ] ")" ]
    ;


(* ============================================================
   LITERALS
   ============================================================ *)

literal
    = INTEGER
    | FLOAT
    | STRING
    | FSTRING
    | TRIPLE_STRING
    | TRIPLE_FSTRING
    | BYTES
    | "true"
    | "false"
    | "none"
    | range_literal
    ;

range_literal
    = expression ".." expression
    ;
