compiler/crates/ori-parser/src/parse_item.rs
use crate::parser::Parser;
use ori_ast::common::{Attr, AttrArg, CfgPredicate, Name, Visibility};
use ori_ast::item::{
    AbiLabel, AliasDecl, ApplyDecl, ApplyMember, ApplyUseSection, EnumDecl, EnumVariant,
    ExternBlock, ExternMember, FuncDecl, FuncSignature, ImportDecl, ImportItem, Item,
    ItemWithAttrs, NamedField, NamespaceDecl, NewtypeDecl, Param, ParamKind, SourceFile,
    StructDecl, StructField, TopConst, TopVar, TraitDecl, TraitMember,
};
use ori_ast::ty::Type;
use ori_diagnostics::Span;
use ori_lexer::TokenKind;
use smol_str::SmolStr;
use std::collections::HashSet;

/// Modifiers that may precede a function head: `async`, `iter`, `mut`.
#[derive(Debug, Clone, Copy, Default)]
struct FuncModifiers {
    is_async: bool,
    is_iter: bool,
    is_mut: bool,
}

impl<'src> Parser<'src> {
    /// Entry point: parse a full source file.
    pub fn parse_source_file(&mut self) -> SourceFile {
        let start = self.current_span();
        let namespace = if self.at(&TokenKind::Module) {
            self.parse_module_header()
        } else if self.at(&TokenKind::Namespace) {
            // S3 cutover: `namespace` is a hard error; recover by parsing the path.
            let span = self.current_span();
            self.error(
                "parse.namespace_removed",
                "`namespace` was removed; use `module` for the file header",
                span,
            );
            self.parse_module_header_after_keyword()
        } else {
            self.error(
                "parse.module_missing",
                "source file must start with a `module` declaration",
                start,
            );
            None
        }
        .unwrap_or_else(|| NamespaceDecl {
            name: ori_ast::common::QualifiedName {
                parts: Vec::new(),
                span: Span::DUMMY,
            },
            span: Span::DUMMY,
        });
        let mut imports = Vec::new();
        while self.at(&TokenKind::Import)
            || (self.at(&TokenKind::Public) && self.peek_nth_kind(1) == Some(&TokenKind::Import))
            || self.at_contextual("imports")
        {
            if self.at_contextual("imports") {
                if let Some(batch) = self.parse_imports_block() {
                    imports.extend(batch);
                }
            } else if let Some(i) = self.parse_import() {
                imports.push(i);
            }
        }
        let mut items = Vec::new();
        while !self.at_eof() {
            let before = self.pos;
            if let Some(item) = self.parse_item_with_attrs() {
                items.push(item);
            } else {
                if self.pos == before {
                    self.advance();
                }
                self.synchronize(&[
                    TokenKind::Func,
                    TokenKind::Public,
                    TokenKind::Struct,
                    TokenKind::Enum,
                    TokenKind::Trait,
                    TokenKind::Apply,
                    TokenKind::Implement,
                    TokenKind::Alias,
                    TokenKind::Newtype,
                    TokenKind::Const,
                    TokenKind::Var,
                    TokenKind::Extern,
                    TokenKind::Mut,
                    TokenKind::Ident,
                    TokenKind::At,
                ]);
                if self.pos == before {
                    self.advance();
                }
            }
        }
        let end = self.tokens.last().map(|t| t.span).unwrap_or(start);
        SourceFile {
            namespace,
            imports,
            items,
            span: start.cover(end),
        }
    }

    /// `module path.to.name` — canonical S3 file header.
    fn parse_module_header(&mut self) -> Option<NamespaceDecl> {
        let start = self.expect(&TokenKind::Module)?;
        let name = self.parse_qualified_name()?;
        Some(NamespaceDecl {
            span: start.cover(name.span),
            name,
        })
    }

    /// Parse the path after a leading header keyword already diagnosed (or to be consumed).
    fn parse_module_header_after_keyword(&mut self) -> Option<NamespaceDecl> {
        let start = self.advance().unwrap().span; // `module` or removed `namespace`
        let name = self.parse_qualified_name()?;
        Some(NamespaceDecl {
            span: start.cover(name.span),
            name,
        })
    }

    /// Standalone `import` / `public import` statement (one form per line).
    fn parse_import(&mut self) -> Option<ImportDecl> {
        let start = self.current_span();
        let visibility = if self.eat(&TokenKind::Public) {
            Visibility::Public
        } else {
            Visibility::Private
        };
        self.expect(&TokenKind::Import)?;
        self.parse_import_body(start, visibility)
    }

    /// S3 block form:
    /// ```text
    /// imports
    ///   path (A, B), path = alias, path
    /// end
    /// ```
    /// Comma-separated multi-import is allowed only inside this block.
    fn parse_imports_block(&mut self) -> Option<Vec<ImportDecl>> {
        let start = self.current_span();
        if !self.at_contextual("imports") {
            return None;
        }
        self.advance(); // contextual `imports`
        let mut decls = Vec::new();
        while !self.at(&TokenKind::End) && !self.at_eof() {
            // Optional commas between entries (and trailing commas).
            while self.eat(&TokenKind::Comma) {}
            if self.at(&TokenKind::End) || self.at_eof() {
                break;
            }
            let item_start = self.current_span();
            let visibility = if self.eat(&TokenKind::Public) {
                Visibility::Public
            } else {
                Visibility::Private
            };
            // Optional `import` keyword inside the block for familiarity.
            let _ = self.eat(&TokenKind::Import);
            let before = self.pos;
            if let Some(decl) = self.parse_import_body(item_start, visibility) {
                decls.push(decl);
            } else if self.pos == before {
                // Avoid infinite loop on unparseable junk.
                self.advance();
            }
        }
        let _ = self.expect_block_end(start, "imports");
        Some(decls)
    }

    /// Shared body after optional visibility / `import` keyword:
    /// `path`, `path = alias`, or `path (A, B [= alias])`.
    fn parse_import_body(&mut self, start: Span, visibility: Visibility) -> Option<ImportDecl> {
        let path = self.parse_qualified_name()?;
        let (alias, selected) = if self.at(&TokenKind::LParen) {
            (None, self.parse_import_selection()?)
        } else if self.eat(&TokenKind::As) || self.eat(&TokenKind::Eq) {
            match self.parse_name() {
                Some(alias) => (Some(alias), Vec::new()),
                None => {
                    if !self.at_eof() && !is_import_alias_recovery_boundary(self.peek_kind()) {
                        self.advance();
                    }
                    return None;
                }
            }
        } else if self.at_contextual("only") {
            // S3 cutover: `only` removed; selective form is `path (A, B)`.
            let only_span = self.current_span();
            self.advance();
            self.error(
                "parse.import_only_removed",
                "`import path only (…)` was removed; use `import path (…)`",
                only_span,
            );
            (None, self.parse_import_selection().unwrap_or_default())
        } else {
            // Whole-module import: full path only (no implicit last-segment alias).
            (None, Vec::new())
        };
        let end = selected
            .last()
            .map(|item| item.span)
            .or_else(|| alias.as_ref().map(|a| a.span))
            .unwrap_or(path.span);
        Some(ImportDecl {
            visibility,
            path,
            alias,
            selected,
            span: start.cover(end),
        })
    }

    fn parse_import_selection(&mut self) -> Option<Vec<ImportItem>> {
        self.expect(&TokenKind::LParen)?;
        let mut selected = Vec::new();
        while !self.at(&TokenKind::RParen) && !self.at_eof() {
            let name = self.parse_name()?;
            let alias = if self.eat(&TokenKind::As) || self.eat(&TokenKind::Eq) {
                Some(self.parse_name()?)
            } else {
                None
            };
            let end = alias.as_ref().map(|a| a.span).unwrap_or(name.span);
            selected.push(ImportItem {
                span: name.span.cover(end),
                name,
                alias,
            });
            if !self.eat(&TokenKind::Comma) {
                break;
            }
        }
        self.expect(&TokenKind::RParen)?;
        Some(selected)
    }

    fn parse_item_with_attrs(&mut self) -> Option<ItemWithAttrs> {
        let mut attrs = Vec::new();
        while self.at(&TokenKind::At) {
            if let Some(attr) = self.parse_attr() {
                attrs.push(attr);
            }
        }
        let item = self.parse_item()?;
        Some(ItemWithAttrs { attrs, item })
    }

    fn parse_attr(&mut self) -> Option<Attr> {
        let start = self.advance().unwrap().span; // @
        let mut name = self.parse_attr_ident()?;
        while self.eat(&TokenKind::Dot) {
            let next = self.parse_attr_ident()?;
            name = Name {
                text: format!("{}.{}", name.text, next.text).into(),
                span: name.span.cover(next.span),
            };
        }
        let mut end = name.span;
        let args = if self.at(&TokenKind::LParen) {
            self.advance();
            let mut args = Vec::new();
            while !self.at(&TokenKind::RParen) && !self.at_eof() {
                let span = self.current_span();
                if name.text == "cfg" && self.at(&TokenKind::StrLit) {
                    let tok = self.advance().expect("cfg string token was checked");
                    let raw = self.slice(tok.span);
                    args.push(AttrArg::String(raw[1..raw.len() - 1].into(), tok.span));
                } else if name.text == "cfg" {
                    args.push(AttrArg::Cfg(self.parse_cfg_predicate()?));
                } else if self.peek_nth_kind(1) == Some(&TokenKind::Colon) {
                    let key = self.parse_attr_ident()?;
                    self.expect(&TokenKind::Colon)?;
                    if self.at(&TokenKind::StrLit) {
                        let tok = self.advance().unwrap();
                        let raw = self.slice(tok.span);
                        let value = Name::new(SmolStr::new(&raw[1..raw.len() - 1]), tok.span);
                        args.push(AttrArg::Named { key, value });
                    } else if self.at(&TokenKind::IntLit)
                        || self.at(&TokenKind::FloatLit)
                        || self.at(&TokenKind::True)
                        || self.at(&TokenKind::False)
                    {
                        let tok = self.advance().unwrap();
                        let raw = self.slice(tok.span);
                        let value = Name::new(SmolStr::new(raw), tok.span);
                        args.push(AttrArg::Named { key, value });
                    } else {
                        let value = self.parse_attr_ident()?;
                        args.push(AttrArg::Named { key, value });
                    }
                } else if self.at(&TokenKind::StrLit) {
                    let tok = self.advance().unwrap();
                    let raw = self.slice(tok.span);
                    args.push(AttrArg::String(raw[1..raw.len() - 1].into(), span));
                } else if self.at(&TokenKind::IntLit) {
                    let tok = self.advance().unwrap();
                    let raw = self.slice(tok.span);
                    args.push(AttrArg::Int(SmolStr::new(raw), tok.span));
                } else {
                    break;
                }
                if !self.eat(&TokenKind::Comma) {
                    break;
                }
            }
            let rparen = self.expect(&TokenKind::RParen)?;
            end = rparen;
            args
        } else {
            Vec::new()
        };
        Some(Attr {
            name,
            args,
            span: start.cover(end),
        })
    }

    fn parse_attr_ident(&mut self) -> Option<Name> {
        match self.peek_kind() {
            Some(tok)
                if !matches!(
                    tok,
                    TokenKind::LParen
                        | TokenKind::RParen
                        | TokenKind::Comma
                        | TokenKind::Dot
                        | TokenKind::Colon
                ) =>
            {
                let tok = self.advance().unwrap();
                let text = SmolStr::new(self.slice(tok.span));
                Some(Name::new(text, tok.span))
            }
            _ => {
                let span = self.current_span();
                self.error("parse.expected_identifier", "expected identifier", span);
                None
            }
        }
    }

    fn parse_cfg_predicate(&mut self) -> Option<CfgPredicate> {
        if !self.enter_nesting() {
            return None;
        }
        let predicate = self.parse_cfg_predicate_inner();
        self.leave_nesting();
        predicate
    }

    fn parse_cfg_predicate_inner(&mut self) -> Option<CfgPredicate> {
        let name = self.parse_cfg_name()?;
        let start = name.span;
        if self.eat(&TokenKind::Colon) {
            let value = self.parse_cfg_name()?;
            return Some(CfgPredicate::NameValue {
                key: name,
                span: start.cover(value.span),
                value,
            });
        }
        if self.eat(&TokenKind::LParen) {
            let mut predicates = Vec::new();
            while !self.at(&TokenKind::RParen) && !self.at_eof() {
                predicates.push(self.parse_cfg_predicate()?);
                if !self.eat(&TokenKind::Comma) {
                    break;
                }
            }
            let end = self.expect(&TokenKind::RParen)?;
            return Some(CfgPredicate::Call {
                operator: name,
                predicates,
                span: start.cover(end),
            });
        }
        self.error(
            "parse.unexpected_token",
            "expected `:` or `(` in conditional-compilation predicate",
            self.current_span(),
        );
        None
    }

    fn parse_cfg_name(&mut self) -> Option<Name> {
        if let Some(token) = self.peek() {
            let text = self.slice(token.span);
            let mut chars = text.chars();
            let is_name = chars
                .next()
                .is_some_and(|first| first == '_' || first.is_ascii_alphabetic())
                && chars.all(|ch| ch == '_' || ch.is_ascii_alphanumeric());
            if is_name {
                let token = self.advance().expect("cfg name token was checked");
                return Some(Name::new(self.slice(token.span), token.span));
            }
        }
        let span = self.current_span();
        self.error(
            "parse.expected_identifier",
            "expected a conditional-compilation name",
            span,
        );
        None
    }

    fn parse_visibility(&mut self) -> Visibility {
        if self.eat(&TokenKind::Public) {
            Visibility::Public
        } else {
            Visibility::Private
        }
    }

    fn parse_item(&mut self) -> Option<Item> {
        if self.at(&TokenKind::Module) {
            let span = self.current_span();
            self.error(
                "parse.module_not_first",
                "`module` must be the first declaration in a file",
                span,
            );
            let _ = self.parse_module_header();
            return None;
        }
        if self.at(&TokenKind::Namespace) {
            let span = self.current_span();
            self.error(
                "parse.namespace_removed",
                "`namespace` was removed; use `module` for the file header",
                span,
            );
            let _ = self.parse_module_header_after_keyword();
            return None;
        }

        if self.at(&TokenKind::Import)
            || (self.at(&TokenKind::Public) && self.peek_nth_kind(1) == Some(&TokenKind::Import))
            || self.at_contextual("imports")
        {
            let span = self.current_span();
            self.error(
                "parse.import_after_declaration",
                "imports must appear before declarations",
                span,
            );
            if self.at_contextual("imports") {
                let _ = self.parse_imports_block();
            } else {
                let _ = self.parse_import();
            }
            return None;
        }

        let vis = self.parse_visibility();
        if self.at_func_decl_start() {
            return Some(Item::Func(self.parse_func_decl(vis)?));
        }
        match self.peek_kind()? {
            TokenKind::Struct => Some(Item::Struct(self.parse_struct_decl(vis)?)),
            TokenKind::Enum => Some(Item::Enum(self.parse_enum_decl(vis)?)),
            TokenKind::Trait => Some(Item::Trait(self.parse_trait_decl(vis)?)),
            TokenKind::Apply => Some(Item::Apply(self.parse_apply_decl()?)),
            TokenKind::Implement => {
                // S3 cutover: `implement Trait for Type` is a hard error.
                let span = self.current_span();
                self.error(
                    "parse.implement_removed",
                    "`implement Trait for Type` was removed; use `apply Type` with `use Trait`",
                    span,
                );
                // Recover by consuming the old form into an apply AST when possible.
                Some(Item::Apply(self.parse_legacy_implement_as_apply()?))
            }
            TokenKind::Alias => Some(Item::Alias(self.parse_alias_decl(vis)?)),
            TokenKind::Newtype => Some(Item::Newtype(self.parse_newtype_decl(vis)?)),
            TokenKind::Const => Some(Item::Const(self.parse_top_const(vis)?)),
            TokenKind::Var => Some(Item::Var(self.parse_top_var(vis)?)),
            TokenKind::Extern => Some(Item::Extern(self.parse_extern_block()?)),
            _ => {
                let span = self.current_span();
                self.error("parse.expected_declaration", "expected a declaration", span);
                None
            }
        }
    }

    /// Whether the next tokens start a function declaration (S3: no `func` keyword).
    ///
    /// Forms: `[async] [mut] name(…)` / `name[T](…)` / `name for T: Trait (…)` /
    /// legacy `name<T>(…)` (errors) / legacy `func …`.
    fn at_func_decl_start(&self) -> bool {
        if self.at(&TokenKind::Func)
            || self.at(&TokenKind::Mut)
            || self.at_contextual("async")
            || self.at_iter_modifier()
        {
            return true;
        }
        self.at_named_func_head()
    }

    /// `name(` / `name[` / `name for` / legacy `name<` — function/method head without modifiers.
    fn at_named_func_head(&self) -> bool {
        if !self.at(&TokenKind::Ident) {
            return false;
        }
        matches!(
            self.peek_nth_kind(1),
            Some(TokenKind::LParen)
                | Some(TokenKind::LBracket)
                | Some(TokenKind::For)
                | Some(TokenKind::Lt)
        )
    }

    // ── Functions ─────────────────────────────────────────────────────────────

    pub fn parse_func_decl(&mut self, vis: Visibility) -> Option<FuncDecl> {
        let start = self.current_span();
        let mods = self.parse_func_modifiers();
        self.reject_func_keyword_on_decl();
        let name = self.parse_name()?;
        let (type_params, where_clause) = self.parse_generic_header();
        let params = self.parse_param_list()?;
        let return_ty = if self.eat(&TokenKind::Arrow) {
            Some(self.parse_type()?)
        } else {
            None
        };
        // Legacy trailing `where` (after return type) is rejected but recovered.
        let where_clause = where_clause.or_else(|| self.parse_where_clause_opt());
        // S3: single-expression body `name(params) -> T => expr` (no `end`).
        if self.eat(&TokenKind::FatArrow) {
            let expr = self.parse_expr()?;
            let expr_span = expr.span();
            let body = ori_ast::stmt::Block {
                stmts: vec![ori_ast::stmt::Stmt::Return(ori_ast::stmt::ReturnStmt {
                    value: Some(Box::new(expr)),
                    span: expr_span,
                })],
                span: expr_span,
            };
            return Some(FuncDecl {
                visibility: vis,
                is_async: mods.is_async,
                is_iter: mods.is_iter,
                is_mut: mods.is_mut,
                name,
                type_params,
                params,
                return_ty,
                where_clause,
                body,
                span: start.cover(expr_span),
            });
        }
        let body = self.parse_block()?;
        let end = self.expect_block_end(start, "function")?;
        Some(FuncDecl {
            visibility: vis,
            is_async: mods.is_async,
            is_iter: mods.is_iter,
            is_mut: mods.is_mut,
            name,
            type_params,
            params,
            return_ty,
            where_clause,
            body,
            span: start.cover(end),
        })
    }

    fn parse_func_signature(&mut self, vis: Visibility) -> Option<FuncSignature> {
        let start = self.current_span();
        let mods = self.parse_func_modifiers();
        self.reject_func_keyword_on_decl();
        let name = self.parse_name()?;
        let (type_params, where_clause) = self.parse_generic_header();
        let params = self.parse_param_list()?;
        let return_ty = if self.eat(&TokenKind::Arrow) {
            Some(self.parse_type()?)
        } else {
            None
        };
        let where_clause = where_clause.or_else(|| self.parse_where_clause_opt());
        let end = return_ty.as_ref().map(|t| t.span()).unwrap_or(name.span);
        Some(FuncSignature {
            visibility: vis,
            is_async: mods.is_async,
            is_iter: mods.is_iter,
            is_mut: mods.is_mut,
            name,
            type_params,
            params,
            return_ty,
            where_clause,
            span: start.cover(end),
        })
    }

    /// `[T]` type params + optional `for T: Trait` bounds (S3 / Auk9-style).
    fn parse_generic_header(
        &mut self,
    ) -> (
        Vec<ori_ast::common::TypeParam>,
        Option<ori_ast::common::WhereClause>,
    ) {
        let mut type_params = self.parse_type_params_opt();
        let where_clause = self.parse_for_bounds_opt(&mut type_params);
        (type_params, where_clause)
    }

    /// S3: declaration form is `name(...)` — `func` on a declaration is a hard error.
    /// Still consumed so recovery can parse the remainder of the signature.
    fn reject_func_keyword_on_decl(&mut self) {
        if self.at(&TokenKind::Func) {
            let span = self.advance().unwrap().span;
            self.error(
                "parse.func_removed",
                "`func` was removed from declarations; write `name(...)` directly",
                span,
            );
        }
    }

    fn parse_param_list(&mut self) -> Option<Vec<Param>> {
        self.expect(&TokenKind::LParen)?;
        let mut params = Vec::new();
        while !self.at(&TokenKind::RParen) && !self.at_eof() {
            params.push(self.parse_param()?);
            if !self.eat(&TokenKind::Comma) {
                break;
            }
        }
        self.expect(&TokenKind::RParen)?;
        self.validate_param_list(&params);
        Some(params)
    }

    fn parse_func_modifiers(&mut self) -> FuncModifiers {
        let mut mods = FuncModifiers::default();
        let mut iter_span = None;
        for _ in 0..3 {
            if !mods.is_async && self.eat_contextual("async") {
                mods.is_async = true;
                continue;
            }
            if !mods.is_iter && self.at_iter_modifier() {
                iter_span = Some(self.current_span());
                self.advance();
                mods.is_iter = true;
                continue;
            }
            if !mods.is_mut && self.eat(&TokenKind::Mut) {
                mods.is_mut = true;
                continue;
            }
            break;
        }
        if mods.is_async && mods.is_iter {
            let span = iter_span.unwrap_or_else(|| self.current_span());
            self.error(
                "parse.async_iter_unsupported",
                "an iterator cannot be `async`; `iter` produces values on demand \
                 and does not await",
                span,
            );
        }
        mods
    }
